修复第二次加载页面不与数据库同步的bug

--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 		"enhance": true
 	},
 	"appid": "wx25980cb49fb558d2",
-	"projectname": "Daka",
+	"projectname": "toyMiniApp",
 	"libVersion": "2.8.1",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
